# DisableTurnAnimation

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  README_KR.md  vcpkg-configuration.json  vcpkg.json
src/: Hooks.cpp  Hooks.h  main.cpp
